[package]
name = "navmesh"
version = "0.7.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Nav-Mesh navigation system"
license-file = "./LICENSE"
homepage = "https://github.com/PsichiX/navmesh"
repository = "https://github.com/PsichiX/navmesh"
documentation = "https://docs.rs/navmesh"
readme = "./README.md"

[features]
parallel = ["rayon"]

[dependencies]
typid  = "1"
petgraph = { version = "0.4", features = ["serde-1"] }
spade = { version = "1.0", features = ["serde_serialize"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1"
rayon = { version = "1.0", optional = true }
approx = "0.3"
