[package]
name = "navmesh"
version = "0.8.2"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2018"
description = "Nav-Mesh navigation system"
license-file = "./LICENSE"
homepage = "https://github.com/PsichiX/navmesh"
repository = "https://github.com/PsichiX/navmesh"
documentation = "https://docs.rs/navmesh"
readme = "./README.md"

[features]
parallel = ["rayon"]
scalar64 = []

[dependencies]
typid  = "1"
petgraph = { version = "0.5", features = ["serde-1"] }
spade = { version = "1.8", features = ["serde_serialize"] }
serde = { version = "1", features = ["derive"] }
rayon = { version = "1.3", optional = true }
approx = "0.3"
bevy = { version = "0.5", optional = true }
