[package]
name = "navmesh"
version = "0.10.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2021"
description = "Nav-Mesh, Nav-Grid and Nav-Net navigation system"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/navmesh"
repository = "https://github.com/PsichiX/navmesh"
documentation = "https://docs.rs/navmesh"
readme = "./README.md"

[features]
parallel = ["rayon"]
scalar64 = []
convert = ["mint"]

[dependencies]
typid  = "1"
petgraph = { version = "0.6", features = ["serde-1"] }
spade = { version = "1.8", features = ["serde_serialize"] }
serde = { version = "1", features = ["derive"] }
rayon = { version = "1.5", optional = true }
approx = "0.5"
mint = { version = "0.5", features = ["serde"], optional = true }
